Setting up functions to create planets, 2d rings and 3d rings
Following the youtube tutorial https://www.youtube.com/watch?v=7VaAIVqu_P0 to examine the code shown in it.

--- a/index.html
+++ b/index.html
@@ -1,199 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <meta charset=utf-8>
     <title>My first three.js app</title>
-    <style>
-        body { margin: 0; }
-        canvas { width: 100%; height: 100% }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 
-<script src="script/three.js"></script>
-<script>
+    <div id="webgl"></div>
 
-    // Set the scene size.
-    const WIDTH = window.innerWidth;
-    const HEIGHT = window.innerHeight;
+    <script src="script/dat.gui.min.js"></script>
+    <script src="script/three.js"></script>
+    <script src="script/OrbitControls.js"></script>
+    <script src="script/index.js"></script>
 
-    // Set some camera attributes.
-    const VIEW_ANGLE = 75;
-    const ASPECT = WIDTH / HEIGHT; //lines 17/18
-    const NEAR = 0.1;
-    const FAR = 10000;
-
-    // Get the DOM element to attach to
-    const container =
-        document.querySelector('body');
-
-    // Create a WebGL renderer, camera
-    // and a scene
-    const renderer = new THREE.WebGLRenderer();
-    const camera =
-        new THREE.PerspectiveCamera(
-            VIEW_ANGLE, // line 21
-            ASPECT, // line 22
-            NEAR, // line 23
-            FAR // line 24
-        );
-    camera.position.set(0,0,1500); // Set position like this
-    camera.lookAt(new THREE.Vector3(0,0,0)); // Set look at coordinate like this
-
-    const scene = new THREE.Scene();
-
-    // Add the camera to the scene.
-    scene.add(camera);
-
-
-
-
-    // Start the renderer.
-    renderer.setSize(WIDTH, HEIGHT);
-
-    // Attach the renderer-supplied
-    // DOM element.
-    container.appendChild(renderer.domElement);
-
-
-    // Lights--------------------------------------------------------
-    // create a point light
-    const pointLight =
-        new THREE.PointLight(0xFFFFFF);
-
-    // set its position
-    pointLight.position.x = 0;
-    pointLight.position.y = 0;
-    pointLight.position.z = 700;
-
-    // add to the scene
-    scene.add(pointLight);
-
-    // create a point light 2
-    const pointLight2 =
-        new THREE.PointLight(0x0000FF);
-
-    // set its position
-    pointLight2.position.x = -10;
-    pointLight2.position.y = -50;
-    pointLight2.position.z = 130;
-
-    // add to the scene
-    scene.add(pointLight2);
-
-
-    // Primitives------------------------------------------------------------
-    // SunInit ---------------------------------------
-    // create the sphere's material
-    const sunMaterial =
-        new THREE.MeshPhongMaterial(
-            {
-                color: 0xffff28
-            });
-
-    // Set up the sphere vars
-    const RADIUS = 1392;
-    const SEGMENTS = 32;
-    const RINGS = 32;
-
-    // Create a new mesh with
-    // sphere geometry - we will cover
-    // the sphereMaterial next!
-    const sun = new THREE.Mesh(
-
-        new THREE.SphereGeometry(
-            RADIUS,
-            SEGMENTS,
-            RINGS),
-
-        sunMaterial);
-
-    // Move the Sphere back in Z so we
-    // can see it.
-    sun.position.z = 0;
-
-    // Finally, add the sphere to the scene.
-    scene.add(sun);
-
-
-    // EarthInit ---------------------------------------
-    // create the sphere's material
-    const earthMaterial =
-        new THREE.MeshPhongMaterial(
-            {
-                color: 0x0505ff
-            });
-
-    // Set up the sphere vars
-    const RADIUS2 = 13;
-    const SEGMENTS2 = 8;
-    const RINGS2 = 8;
-
-    // Create a new mesh with
-    // sphere geometry - we will cover
-    // the sphereMaterial next!
-    const earth = new THREE.Mesh(
-
-        new THREE.SphereGeometry(
-            RADIUS2,
-            SEGMENTS2,
-            RINGS2),
-
-        earthMaterial);
-
-    // Move the Sphere back in Z so we
-    // can see it.
-    earth.position.z = -149600;
-
-    // Finally, add the sphere to the scene.
-    scene.add(earth);
-
-
-    // MoonInit ---------------------------------------
-    // create the sphere's material
-    const moonMaterial =
-        new THREE.MeshPhongMaterial(
-            {
-                color: 0x555555
-            });
-
-    // Set up the sphere vars
-    const RADIUS3 = 3.5;
-    const SEGMENTS3 = 6;
-    const RINGS3 = 6;
-
-    // Create a new mesh with
-    // sphere geometry - we will cover
-    // the sphereMaterial next!
-    const moon = new THREE.Mesh(
-
-        new THREE.SphereGeometry(
-            RADIUS3,
-            SEGMENTS3,
-            RINGS3),
-
-        moonMaterial);
-
-    // can see it.
-    moon.position.z = -149600;
-
-    scene.add(moon);
-
-    // Sphere 3 fin
-
-
-    function update () {
-        // Draw!
-        renderer.render(scene, camera);
-
-        // Schedule the next frame.
-        requestAnimationFrame(update);
-    }
-
-    // Schedule the first frame.
-    requestAnimationFrame(update);
-
-
-</script>
 </body>
 </html>
